2025-02-11T01:01:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13253671177 # 562
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-11
* notice: last 14d: unq all: 12 24
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 457 850
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 459 852
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-02-10]

2025-02-10T01:02:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13231449191 # 561
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-10
* notice: last 14d: unq all: 11 22
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 456 849
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 457 850
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-09]

2025-02-09T01:04:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13220903405 # 560
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-09
* notice: last 14d: unq all: 11 21
* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 455 848
* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 456 849
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-08]

2025-02-08T00:59:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13210654623 # 559