@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-11T01:01:25Z",
+  "timestamp" : "2025-02-12T01:01:30Z",
   "count_outdated" : 828,
   "uniques_outdated" : 438,
-  "count" : 852,
-  "uniques" : 459,
+  "count" : 853,
+  "uniques" : 460,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
