@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 12,
   "clones": [
     {
@@ -56,6 +56,11 @@
       "timestamp": "2025-02-10T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
