@@ -1,3 +1,12 @@
+2025-02-12T01:01:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13275700383 # 563
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-12
+* notice: last 14d: unq all: 12 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 438 828 / 459 852
+* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 460 853
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-11]
+
 2025-02-11T01:01:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13253671177 # 562
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-11
